prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/sema_errors/too_many_locals.nut
// EXPECT_ERROR: "too many"
function too_many() {
local a000=0;local a001=0;local a002=0;local a003=0;local a004=0;local a005=0;local a006=0;local a007=0;local a008=0;local a009=0
local a010=0;local a011=0;local a012=0;local a013=0;local a014=0;local a015=0;local a016=0;local a017=0;local a018=0;local a019=0
local a020=0;local a021=0;local a022=0;local a023=0;local a024=0;local a025=0;local a026=0;local a027=0;local a028=0;local a029=0
local a030=0;local a031=0;local a032=0;local a033=0;local a034=0;local a035=0;local a036=0;local a037=0;local a038=0;local a039=0
local a040=0;local a041=0;local a042=0;local a043=0;local a044=0;local a045=0;local a046=0;local a047=0;local a048=0;local a049=0
local a050=0;local a051=0;local a052=0;local a053=0;local a054=0;local a055=0;local a056=0;local a057=0;local a058=0;local a059=0
local a060=0;local a061=0;local a062=0;local a063=0;local a064=0;local a065=0;local a066=0;local a067=0;local a068=0;local a069=0
local a070=0;local a071=0;local a072=0;local a073=0;local a074=0;local a075=0;local a076=0;local a077=0;local a078=0;local a079=0
local a080=0;local a081=0;local a082=0;local a083=0;local a084=0;local a085=0;local a086=0;local a087=0;local a088=0;local a089=0
local a090=0;local a091=0;local a092=0;local a093=0;local a094=0;local a095=0;local a096=0;local a097=0;local a098=0;local a099=0
local a100=0;local a101=0;local a102=0;local a103=0;local a104=0;local a105=0;local a106=0;local a107=0;local a108=0;local a109=0
local a110=0;local a111=0;local a112=0;local a113=0;local a114=0;local a115=0;local a116=0;local a117=0;local a118=0;local a119=0
local a120=0;local a121=0;local a122=0;local a123=0;local a124=0;local a125=0;local a126=0;local a127=0;local a128=0;local a129=0
local a130=0;local a131=0;local a132=0;local a133=0;local a134=0;local a135=0;local a136=0;local a137=0;local a138=0;local a139=0
local a140=0;local a141=0;local a142=0;local a143=0;local a144=0;local a145=0;local a146=0;local a147=0;local a148=0;local a149=0
local a150=0;local a151=0;local a152=0;local a153=0;local a154=0;local a155=0;local a156=0;local a157=0;local a158=0;local a159=0
local a160=0;local a161=0;local a162=0;local a163=0;local a164=0;local a165=0;local a166=0;local a167=0;local a168=0;local a169=0
local a170=0;local a171=0;local a172=0;local a173=0;local a174=0;local a175=0;local a176=0;local a177=0;local a178=0;local a179=0
local a180=0;local a181=0;local a182=0;local a183=0;local a184=0;local a185=0;local a186=0;local a187=0;local a188=0;local a189=0
local a190=0;local a191=0;local a192=0;local a193=0;local a194=0;local a195=0;local a196=0;local a197=0;local a198=0;local a199=0
local a200=0;local a201=0;local a202=0;local a203=0;local a204=0;local a205=0;local a206=0;local a207=0;local a208=0;local a209=0
local a210=0;local a211=0;local a212=0;local a213=0;local a214=0;local a215=0;local a216=0;local a217=0;local a218=0;local a219=0
local a220=0;local a221=0;local a222=0;local a223=0;local a224=0;local a225=0;local a226=0;local a227=0;local a228=0;local a229=0
local a230=0;local a231=0;local a232=0;local a233=0;local a234=0;local a235=0;local a236=0;local a237=0;local a238=0;local a239=0
local a240=0;local a241=0;local a242=0;local a243=0;local a244=0;local a245=0;local a246=0;local a247=0;local a248=0;local a249=0
local a250=0;local a251=0;local a252=0;local a253=0;local a254=0;local a255=0;local a256=0;local a257=0;local a258=0;local a259=0
return 0
}
